_handles: z-index:10 to ensure handles sit ontop of monacos diff.viewPort (z-index:9)

--- a/scss/_handles.scss
+++ b/scss/_handles.scss
@@ -1,7 +1,7 @@
 .drawer-handle {
   position: absolute;
   top: calc(50vh - 60px);
-  z-index: 2;
+  z-index: 10;
   height: 40px !important;
   width: 20px !important;
   min-width: 10px !important;
